tests/errors/syn_method15.java
public class syn_method15 {
public static int ( ) {
 
}
}